--- a/D3.js.md
+++ b/D3.js.md
@@ -4,25 +4,83 @@ title: "D3.js Portfolio"
 read_time: false
 ---
 
-[Explore Officer-Involved Deaths In Your City](https://connorrothschild.github.io/D3.js/police-killings/)
+<li class="project-list-item"> 
+    <img 
+    src="https://raw.githubusercontent.com/connorrothschild/connorrothschild.github.io/master/_assets/images/police-killings.jpg" 
+    alt="Explore Officer-Involved Deaths In Your City" 
+    class="project-list-item-thumbnail"> 
+    <div class="project-list-item-text-wrap"> 
+        <h4 class="project-list-item-date">December 28, 2019</h4> 
+        <a href="https://connorrothschild.github.io/D3.js/police-killings/" class="project-list-item-link" target="_blank"> 
+        <h3 class="project-list-item-title">Explore Officer-Involved Deaths In Your City</h3>
+        </a> 
+    </div> 
+</li>
 
-[![Explore Officer-Involved Deaths In Your City](https://raw.githubusercontent.com/connorrothschild/connorrothschild.github.io/master/_assets/images/police-killings.jpg)](https://connorrothschild.github.io/D3.js/police-killings/)
+<li class="project-list-item"> 
+    <img 
+    src="https://raw.githubusercontent.com/connorrothschild/connorrothschild.github.io/master/_assets/images/office.jpg" 
+    alt="Who is the Most Popular Character in The Office?" 
+    class="project-list-item-thumbnail"> 
+    <div class="project-list-item-text-wrap"> 
+        <h4 class="project-list-item-date">December 10, 2019</h4> 
+        <a href="https://connorrothschild.github.io/D3.js/the-office-popularity/" class="project-list-item-link" target="_blank"> 
+        <h3 class="project-list-item-title">Who is the Most Popular Character in The Office?</h3>
+        </a> 
+    </div> 
+</li>
 
-[Who is the Most Popular Character in The Office?](https://connorrothschild.github.io/D3.js/the-office-popularity/)
+<li class="project-list-item"> 
+    <img 
+    src="https://raw.githubusercontent.com/connorrothschild/connorrothschild.github.io/master/_assets/images/map-overdoses.jpg" 
+    alt="Opioid-Involved Overdose Deaths Over Time" 
+    class="project-list-item-thumbnail"> 
+    <div class="project-list-item-text-wrap"> 
+        <h4 class="project-list-item-date">November 22, 2019</h4> 
+        <a href="https://connorrothschild.github.io/D3.js/map-overdoses" class="project-list-item-link" target="_blank"> 
+        <h3 class="project-list-item-title">Opioid-Involved Overdose Deaths Over Time</h3>
+        </a> 
+    </div> 
+</li>
 
-[![Who is the Most Popular Character in The Office?](https://raw.githubusercontent.com/connorrothschild/connorrothschild.github.io/master/_assets/images/office.jpg)](https://connorrothschild.github.io/D3.js/the-office-popularity/)
+<li class="project-list-item"> 
+    <img 
+    src="https://raw.githubusercontent.com/connorrothschild/connorrothschild.github.io/master/_assets/images/kanye.jpg" 
+    alt="Kanye West's Rebirth" 
+    class="project-list-item-thumbnail"> 
+    <div class="project-list-item-text-wrap"> 
+        <h4 class="project-list-item-date">November 10, 2019</h4> 
+        <a href="https://connorrothschild.github.io/D3.js/born-again-kanye" class="project-list-item-link" target="_blank"> 
+        <h3 class="project-list-item-title">Kanye West's Rebirth: How Being Reborn has Changed Kanye's Music</h3>
+        </a> 
+    </div> 
+</li>
 
-[Opioid-Involved Overdose Deaths Over Time](https://connorrothschild.github.io/D3.js/map-overdoses)
+<li class="project-list-item"> 
+    <img 
+    src="https://raw.githubusercontent.com/connorrothschild/connorrothschild.github.io/master/_assets/images/automation.jpg" 
+    alt="Automation and Its Impact on Jobs" 
+    class="project-list-item-thumbnail"> 
+    <div class="project-list-item-text-wrap"> 
+        <h4 class="project-list-item-date">October 26, 2019</h4> 
+        <a href="https://connorrothschild.github.io/D3.js/automation/" class="project-list-item-link" target="_blank"> 
+        <h3 class="project-list-item-title">Automation and Its Impact on Jobs</h3>
+        </a> 
+    </div> 
+</li>
 
-[![Opioid-Involved Overdose Deaths Over Time](https://raw.githubusercontent.com/connorrothschild/connorrothschild.github.io/master/_assets/images/map-overdoses.jpg)](https://connorrothschild.github.io/D3.js/map-overdoses)
-
-[Kanye West's Rebirth](https://connorrothschild.github.io/D3.js/born-again-kanye)
-
-[![Kanye West's Rebirth](https://raw.githubusercontent.com/connorrothschild/connorrothschild.github.io/master/_assets/images/kanye.jpg)](https://connorrothschild.github.io/D3.js/born-again-kanye)
-
-[Automation and Its Impact on Jobs](https://connorrothschild.github.io/D3.js/Automation/)
-
-[![Automation and Its Impact on Jobs](https://raw.githubusercontent.com/connorrothschild/connorrothschild.github.io/master/_assets/images/automation.jpg)](https://connorrothschild.github.io/D3.js/automation/)
+<li class="project-list-item"> 
+    <img 
+    src="https://raw.githubusercontent.com/connorrothschild/connorrothschild.github.io/master/_assets/images/bar-chart-race.gif" 
+    alt="The Race for Media Attention" 
+    class="project-list-item-thumbnail"> 
+    <div class="project-list-item-text-wrap"> 
+        <h4 class="project-list-item-date">November 12, 2019</h4> 
+        <a href="https://observablehq.com/@connorrothschild/bar-chart-race" class="project-list-item-link" target="_blank"> 
+        <h3 class="project-list-item-title">The Race for Media Attention</h3>
+        </a> 
+    </div> 
+</li>
 
 [The Race for Media Attention](https://observablehq.com/@connorrothschild/bar-chart-race)
 
