--- a/D3.js.md
+++ b/D3.js.md
@@ -6,6 +6,19 @@ read_time: false
 
 <li class="project-list-item"> 
     <img 
+    src="https://raw.githubusercontent.com/connorrothschild/connorrothschild.github.io/master/_assets/images/police-killings-waffle.jpg" 
+    alt="Police Killings Waffle" 
+    class="project-list-item-thumbnail"> 
+    <div class="project-list-item-text-wrap"> 
+        <h4 class="project-list-item-date">December 28, 2019</h4> 
+        <a href="https://connorrothschild.github.io/D3.js/police-killings-waffle/" class="project-list-item-link" target="_blank"> 
+        <h3 class="project-list-item-title">Each square represents one person who was killed by police between 2013 and 2018. Explore them for yourself.</h3>
+        </a> 
+    </div> 
+</li>
+
+<li class="project-list-item"> 
+    <img 
     src="https://raw.githubusercontent.com/connorrothschild/connorrothschild.github.io/master/_assets/images/police-killings.jpg" 
     alt="Explore Officer-Involved Deaths In Your City" 
     class="project-list-item-thumbnail"> 
