remove target blank

--- a/D3.js.md
+++ b/D3.js.md
@@ -6,12 +6,25 @@ read_time: false
 
 <li class="project-list-item"> 
     <img 
+    src="https://raw.githubusercontent.com/connorrothschild/connorrothschild.github.io/master/_assets/images/what-are-you-doing.jpg" 
+    alt="What Are You Doing?" 
+    class="project-list-item-thumbnail"> 
+    <div class="project-list-item-text-wrap"> 
+        <h4 class="project-list-item-date">February 8, 2020</h4> 
+        <a href="https://connorrothschild.github.io/what-are-you-doing/" class="project-list-item-link" > 
+        <h3 class="project-list-item-title">Let Me Guess What You're Doing Right Now</h3>
+        </a> 
+    </div> 
+</li>
+
+<li class="project-list-item"> 
+    <img 
     src="https://raw.githubusercontent.com/connorrothschild/connorrothschild.github.io/master/_assets/images/police-killings-waffle.jpg" 
     alt="Police Killings Waffle" 
     class="project-list-item-thumbnail"> 
     <div class="project-list-item-text-wrap"> 
         <h4 class="project-list-item-date">December 28, 2019</h4> 
-        <a href="https://connorrothschild.github.io/D3.js/police-killings-waffle/" class="project-list-item-link" target="_blank"> 
+        <a href="https://connorrothschild.github.io/D3.js/police-killings-waffle/" class="project-list-item-link" > 
         <h3 class="project-list-item-title">Each square represents one person who was killed by police between 2013 and 2018. Explore them for yourself.</h3>
         </a> 
     </div> 
@@ -24,7 +37,7 @@ read_time: false
     class="project-list-item-thumbnail"> 
     <div class="project-list-item-text-wrap"> 
         <h4 class="project-list-item-date">December 28, 2019</h4> 
-        <a href="https://connorrothschild.github.io/D3.js/police-killings/" class="project-list-item-link" target="_blank"> 
+        <a href="https://connorrothschild.github.io/D3.js/police-killings/" class="project-list-item-link" > 
         <h3 class="project-list-item-title">Explore Officer-Involved Deaths In Your City</h3>
         </a> 
     </div> 
@@ -37,7 +50,7 @@ read_time: false
     class="project-list-item-thumbnail"> 
     <div class="project-list-item-text-wrap"> 
         <h4 class="project-list-item-date">December 10, 2019</h4> 
-        <a href="https://connorrothschild.github.io/D3.js/the-office-popularity/" class="project-list-item-link" target="_blank"> 
+        <a href="https://connorrothschild.github.io/D3.js/the-office-popularity/" class="project-list-item-link" > 
         <h3 class="project-list-item-title">Who is the Most Popular Character in The Office?</h3>
         </a> 
     </div> 
@@ -50,7 +63,7 @@ read_time: false
     class="project-list-item-thumbnail"> 
     <div class="project-list-item-text-wrap"> 
         <h4 class="project-list-item-date">November 22, 2019</h4> 
-        <a href="https://connorrothschild.github.io/D3.js/map-overdoses" class="project-list-item-link" target="_blank"> 
+        <a href="https://connorrothschild.github.io/D3.js/map-overdoses" class="project-list-item-link" > 
         <h3 class="project-list-item-title">Opioid-Involved Overdose Deaths Over Time</h3>
         </a> 
     </div> 
@@ -63,7 +76,7 @@ read_time: false
     class="project-list-item-thumbnail"> 
     <div class="project-list-item-text-wrap"> 
         <h4 class="project-list-item-date">November 10, 2019</h4> 
-        <a href="https://connorrothschild.github.io/D3.js/born-again-kanye" class="project-list-item-link" target="_blank"> 
+        <a href="https://connorrothschild.github.io/D3.js/born-again-kanye" class="project-list-item-link" > 
         <h3 class="project-list-item-title">Kanye West's Rebirth: How Being Reborn has Changed Kanye's Music</h3>
         </a> 
     </div> 
@@ -76,7 +89,7 @@ read_time: false
     class="project-list-item-thumbnail"> 
     <div class="project-list-item-text-wrap"> 
         <h4 class="project-list-item-date">October 26, 2019</h4> 
-        <a href="https://connorrothschild.github.io/D3.js/automation/" class="project-list-item-link" target="_blank"> 
+        <a href="https://connorrothschild.github.io/D3.js/automation/" class="project-list-item-link" > 
         <h3 class="project-list-item-title">Automation and Its Impact on Jobs</h3>
         </a> 
     </div> 
@@ -89,7 +102,7 @@ read_time: false
     class="project-list-item-thumbnail"> 
     <div class="project-list-item-text-wrap"> 
         <h4 class="project-list-item-date">November 12, 2019</h4> 
-        <a href="https://observablehq.com/@connorrothschild/bar-chart-race" class="project-list-item-link" target="_blank"> 
+        <a href="https://observablehq.com/@connorrothschild/bar-chart-race" class="project-list-item-link" > 
         <h3 class="project-list-item-title">The Race for Media Attention</h3>
         </a> 
     </div> 
