--- a/D3.js.md
+++ b/D3.js.md
@@ -6,6 +6,19 @@ read_time: false
 
 <li class="project-list-item"> 
     <img 
+    src="https://raw.githubusercontent.com/connorrothschild/connorrothschild.github.io/master/_assets/images/compas.jpg" 
+    alt="Are You Smarter Than COMPAS?" 
+    class="project-list-item-thumbnail"> 
+    <div class="project-list-item-text-wrap"> 
+        <h4 class="project-list-item-date">March 5, 2020</h4> 
+        <a href="https://connorrothschild.github.io/compas/" class="project-list-item-link" > 
+        <h3 class="project-list-item-title">Are You Smarter Than a Criminal Justice Algorithm?</h3>
+        </a> 
+    </div> 
+</li>
+
+<li class="project-list-item"> 
+    <img 
     src="https://raw.githubusercontent.com/connorrothschild/connorrothschild.github.io/master/_assets/images/what-are-you-doing.jpg" 
     alt="What Are You Doing?" 
     class="project-list-item-thumbnail"> 
