update d3 page to include covid

--- a/D3.js.md
+++ b/D3.js.md
@@ -6,6 +6,20 @@ read_time: false
 
 <li class="project-list-item"> 
     <img 
+    src="https://raw.githubusercontent.com/connorrothschild/connorrothschild.github.io/master/_assets/images/covid-d3.jpg" 
+    alt="Cumulative COVID-19 Cases, by Country" 
+    class="project-list-item-thumbnail"> 
+
+    <div class="project-list-item-text-wrap"> 
+        <h4 class="project-list-item-date">March 18, 2020</h4> 
+        <a href="https://connorrothschild.github.io/D3.js/covid/" class="project-list-item-link" > 
+        <h3 class="project-list-item-title">Cumulative COVID-19 Cases, by Country (Updated Daily)</h3>
+        </a> 
+    </div> 
+</li>
+
+<li class="project-list-item"> 
+    <img 
     src="https://raw.githubusercontent.com/connorrothschild/connorrothschild.github.io/master/_assets/images/compas.jpg" 
     alt="Are You Smarter Than COMPAS?" 
     class="project-list-item-thumbnail"> 
