add map to d3 portfolio

--- a/D3.js.md
+++ b/D3.js.md
@@ -6,6 +6,21 @@ read_time: false
 
 <li class="project-list-item"> 
     <img 
+    src="https://raw.githubusercontent.com/connorrothschild/connorrothschild.github.io/master/_assets/images/covid-d3-counties.jpg" 
+    alt="Multiple Views: Recorded COVID-19 Cases, by County" 
+    class="project-list-item-thumbnail"> 
+
+    <div class="project-list-item-text-wrap"> 
+        <h4 class="project-list-item-date">March 28, 2020</h4> 
+        <a href="https://connorrothschild.github.io/D3.js/covid-counties/" class="project-list-item-link" > 
+        <h3 class="project-list-item-title">Multiple Views: Recorded COVID-19 Cases, by County</h3>
+        </a> 
+    </div> 
+
+</li>
+
+<li class="project-list-item"> 
+    <img 
     src="https://raw.githubusercontent.com/connorrothschild/connorrothschild.github.io/master/_assets/images/covid-d3.jpg" 
     alt="Cumulative COVID-19 Cases, by Country" 
     class="project-list-item-thumbnail"> 
