--- a/_R/2020-05-19-recreating-a-table-by-the-economist-using-reactable.Rmd
+++ b/_R/2020-05-19-recreating-a-table-by-the-economist-using-reactable.Rmd
@@ -7,5 +7,5 @@ comments: true
 ---
 
 ```{r, echo=FALSE}
-htmltools::includeHTML("2020-05-19-recreating-a-table-by-the-economist-using-reactable.html")
+htmltools::includeHTML("reactable_blog_post.html")
 ```
