--- a/_R/2020-05-18-recreating-a-table-by-the-economist-using-reactable.Rmd
+++ b/_R/2020-05-18-recreating-a-table-by-the-economist-using-reactable.Rmd
@@ -1,12 +1,12 @@
 ---
-date: "2020-05-18"
+date: "2020-05-19"
 category: R
 tags: [r, visualization, interactive]
 comments: true
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE, message = FALSE, warning = FALSE)
+knitr::opts_chunk$set(echo = TRUE, message = FALSE, warning = FALSE, eval = FALSE)
 ```
 
 *The Economist* recently released a series of country-level [datasets](https://twitter.com/J_CD_T/status/1261625814854045696) on 'excess mortality', a term used to [describe](https://www.economist.com/graphic-detail/2020/04/16/tracking-covid-19-excess-deaths-across-countries) 'the gap between the total number of people who died from any cause, and the historical average for the same place and time of year.' In simpler terms, the measure captures how many deaths *are* happening that *shouldn't be*.
