--- a/D3.js.md
+++ b/D3.js.md
@@ -6,7 +6,7 @@ read_time: false
 
 <li class="project-list-item"> 
     <img 
-    src="https://raw.githubusercontent.com/connorrothschild/connorrothschild.github.io/master/_assets/images/covid-d3-counties.jpg" 
+    src="https://raw.githubusercontent.com/connorrothschild/v1/master/_assets/images/covid-d3-counties.jpg" 
     alt="Multiple Views: Recorded COVID-19 Cases, by County" 
     class="project-list-item-thumbnail"> 
 
@@ -21,7 +21,7 @@ read_time: false
 
 <li class="project-list-item"> 
     <img 
-    src="https://raw.githubusercontent.com/connorrothschild/connorrothschild.github.io/master/_assets/images/covid-d3.jpg" 
+    src="https://raw.githubusercontent.com/connorrothschild/v1/master/_assets/images/covid-d3.jpg" 
     alt="Cumulative COVID-19 Cases, by Country" 
     class="project-list-item-thumbnail"> 
 
@@ -35,7 +35,7 @@ read_time: false
 
 <li class="project-list-item"> 
     <img 
-    src="https://raw.githubusercontent.com/connorrothschild/connorrothschild.github.io/master/_assets/images/compas.jpg" 
+    src="https://raw.githubusercontent.com/connorrothschild/v1/master/_assets/images/compas.jpg" 
     alt="Are You Smarter Than COMPAS?" 
     class="project-list-item-thumbnail"> 
     <div class="project-list-item-text-wrap"> 
@@ -48,7 +48,7 @@ read_time: false
 
 <li class="project-list-item"> 
     <img 
-    src="https://raw.githubusercontent.com/connorrothschild/connorrothschild.github.io/master/_assets/images/what-are-you-doing.jpg" 
+    src="https://raw.githubusercontent.com/connorrothschild/v1/master/_assets/images/what-are-you-doing.jpg" 
     alt="What Are You Doing?" 
     class="project-list-item-thumbnail"> 
     <div class="project-list-item-text-wrap"> 
@@ -61,7 +61,7 @@ read_time: false
 
 <li class="project-list-item"> 
     <img 
-    src="https://raw.githubusercontent.com/connorrothschild/connorrothschild.github.io/master/_assets/images/police-killings-waffle.jpg" 
+    src="https://raw.githubusercontent.com/connorrothschild/v1/master/_assets/images/police-killings-waffle.jpg" 
     alt="Police Killings Waffle" 
     class="project-list-item-thumbnail"> 
     <div class="project-list-item-text-wrap"> 
@@ -74,7 +74,7 @@ read_time: false
 
 <li class="project-list-item"> 
     <img 
-    src="https://raw.githubusercontent.com/connorrothschild/connorrothschild.github.io/master/_assets/images/police-killings.jpg" 
+    src="https://raw.githubusercontent.com/connorrothschild/v1/master/_assets/images/police-killings.jpg" 
     alt="Explore Officer-Involved Deaths In Your City" 
     class="project-list-item-thumbnail"> 
 
@@ -88,7 +88,7 @@ read_time: false
 
 <li class="project-list-item"> 
     <img 
-    src="https://raw.githubusercontent.com/connorrothschild/connorrothschild.github.io/master/_assets/images/office.jpg" 
+    src="https://raw.githubusercontent.com/connorrothschild/v1/master/_assets/images/office.jpg" 
     alt="Who is the Most Popular Character in The Office?" 
     class="project-list-item-thumbnail"> 
 
@@ -102,7 +102,7 @@ read_time: false
 
 <li class="project-list-item"> 
     <img 
-    src="https://raw.githubusercontent.com/connorrothschild/connorrothschild.github.io/master/_assets/images/map-overdoses.jpg" 
+    src="https://raw.githubusercontent.com/connorrothschild/v1/master/_assets/images/map-overdoses.jpg" 
     alt="Opioid-Involved Overdose Deaths Over Time" 
     class="project-list-item-thumbnail"> 
     <div class="project-list-item-text-wrap"> 
@@ -115,7 +115,7 @@ read_time: false
 
 <li class="project-list-item"> 
     <img 
-    src="https://raw.githubusercontent.com/connorrothschild/connorrothschild.github.io/master/_assets/images/kanye.jpg" 
+    src="https://raw.githubusercontent.com/connorrothschild/v1/master/_assets/images/kanye.jpg" 
     alt="Kanye West's Rebirth" 
     class="project-list-item-thumbnail"> 
 
@@ -129,7 +129,7 @@ read_time: false
 
 <li class="project-list-item"> 
     <img 
-    src="https://raw.githubusercontent.com/connorrothschild/connorrothschild.github.io/master/_assets/images/automation.jpg" 
+    src="https://raw.githubusercontent.com/connorrothschild/v1/master/_assets/images/automation.jpg" 
     alt="Automation and Its Impact on Jobs" 
     class="project-list-item-thumbnail"> 
     <div class="project-list-item-text-wrap"> 
@@ -142,7 +142,7 @@ read_time: false
 
 <li class="project-list-item"> 
     <img 
-    src="https://raw.githubusercontent.com/connorrothschild/connorrothschild.github.io/master/_assets/images/bar-chart-race.gif" 
+    src="https://raw.githubusercontent.com/connorrothschild/v1/master/_assets/images/bar-chart-race.gif" 
     alt="The Race for Media Attention" 
     class="project-list-item-thumbnail"> 
     <div class="project-list-item-text-wrap"> 
